--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body> class="bg-normal">
+<body class="bg-normal">
 
         <div class="container">
         <h1>What is your name?</h1>
